# metriport-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/metriport/: __init__.py  client.py  environment.py
src/metriport/commons/types/: address.py
src/metriport/core/: client_wrapper.py
src/metriport/fhir/types/: __init__.py  access_policy.py  access_policy_ip_access_rule.py  access_policy_ip_access_rule_action.py  access_policy_resource.py  access_policy_resource_write_criteria.py  account.py  account_coverage.py  account_guarantor.py  account_status.py  activity_definition.py  activity_definition_dynamic_value.py  activity_definition_participant.py  address.py  adverse_event.py  adverse_event_causality.py  adverse_event_suspect_entity.py  age.py  agent.py  agent_channel.py  agent_setting.py  allergy_intolerance.py  allergy_intolerance_reaction.py  allergy_intolerance_reaction_severity.py  annotation.py  appointment.py  appointment_participant.py  appointment_participant_required.py  appointment_response.py  appointment_status.py  async_job.py  attachment.py  audit_event.py  audit_event_agent.py  audit_event_detail.py  audit_event_entity.py  audit_event_network.py  audit_event_outcome.py  audit_event_source.py  base_resource.py  (+784 more)
src/metriport/medical/: __init__.py  client.py
src/metriport/medical/document/: client.py
src/metriport/medical/facility/: client.py
src/metriport/medical/fhir/: client.py
src/metriport/medical/organization/: client.py
src/metriport/medical/patient/: __init__.py  client.py
src/metriport/resources/: __init__.py
(+947 files in other folders)
