
[tool.poetry]
name = "fern-metriport"
version = "0.0.2"
description = ""
authors = []
packages = [
    { include = "metriport", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "0.23.3"
pydantic = "^1.9.2"
backports-cached_property = "1.0.2"
types-backports = "0.1.3"

[tool.poetry.dev-dependencies]
mypy = "0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
